[build-system]
requires = [
    "setuptools",
    "wheel",
    "pybind11"
]
build-backend = "setuptools.build_meta"

[project]
name = "investment-portfolio-analyzer"
version = "0.0.1"
description = "A Python/C++ hybrid package for portfolio analysis"
readme = README.md
dependencies = [
    "alpaca-py",
    "pandas",
    "python-dotenv",
    "numpy",
    "pybind11".
]

[tool.setuptools]
package-dir = {"" = "app"}

[tool.setuptools.packages.find]
where = ["app"]
